development-runs/332/k8s/validate/resources/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sme-app
  labels:
    io.kompose.service: api
    app: api
  annotations:
    kompose.cmd: kompose convert -f docker-compose-332.yml -o k8s-332/
    kompose.version: "1.34.0 (cbf2835db)"
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
      app: api
  template:
    metadata:
      labels:
        io.kompose.service: api
        app: api
      annotations:
        kompose.cmd: kompose convert -f docker-compose-332.yml -o k8s-332/
        kompose.version: "1.34.0 (cbf2835db)"
    spec:
      containers:
        - name: api
          image: ralfx22/sme-api:latest
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
