development-runs/332/k8s/validate/resources/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sme-app
  labels:
    io.kompose.service: frontend
    app: frontend
  annotations:
    kompose.cmd: kompose convert -f docker-compose-332.yml -o k8s-332/
    kompose.version: "1.34.0 (cbf2835db)"
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    io.kompose.service: frontend
